# Jetson_CV-AI

./: .gitignore  MERLIN.sln  README.md
MERLIN_Quest3_client/: .gitignore
MERLIN_Quest3_client/Assets/: MERLIN_Cube_Material.mat  MerlinAR.unity
MERLIN_Quest3_client/Assets/Resources/: ARBridgeConfig.asset
MERLIN_Quest3_client/Assets/Scripts/: ARBridge.cs  ARBridgeConfig.cs  MerlinAR.cs
MERLIN_Quest3_client/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
MERLIN_Quest3_client/Assets/XR/Settings/: OculusSettings.asset
MERLIN_Quest3_client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
gateway/: .gitignore  Cargo.toml
gateway/src/: main.rs  schema.rs
gateway/src/ar/: jetson_client.rs  mod.rs
ml_services/reasoning_engine/: llm_client.py
ml_services/speech_synthesis/: tts_engine.py
ml_services/voice_brain/: fasterWhispertest.py  memory_core.py  voice_brain.py  voice_brain.py.backup
p1/: Cargo.toml
p1/src/: lib.rs
p1/src/audio/: filters.rs  metrics.rs  mod.rs  traits.rs
rust_audio/: Cargo.toml
rust_audio/src/: lib.rs  main.rs
rust_audio/src/ar/: bridge.rs  mod.rs
rust_audio/src/audio/: processor.rs  wav_writer.rs
rust_audio/src/display/: meter.rs  mod.rs
rust_comms/: Cargo.toml
rust_comms/src/: lib.rs
rust_comms/src/ar/: protocol.rs
