[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = { version = "0.8.8", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
async-stream = "*"
futures-util = "*"
dotenv = "0.15.0"
