[package]
name = "p1"
version = "0.1.0"
edition = "2024"

[lib]
name = "p1"
path = "src/lib.rs"

[[bin]]
name = "p1"
path = "src/main.rs"

[[bin]]
name = "ar_server"
path = "src/bin/ar_server.rs"

[dependencies]
chrono = "0.4.42"
cpal = "0.15" 
futures-util = "0.3.31"
hound = "3.5.1"
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", featuers = ["v4"], features = ["v4"] } 
